--- a/css/header.css
+++ b/css/header.css
@@ -1,10 +1,13 @@
 header {
-    background-color: rgba(105, 204, 138, 0.37);
+    background-color: #0e69af;
 }
 
 nav {
     display: flex;
-    width: 80%;
+    width: auto;
+    min-width: 60%;
+    width: 1000px;
+    max-width: 100%;
     margin: auto;
 }
 
@@ -17,15 +20,15 @@ nav {
 
 #nav-right {
     display: inline-flex;
-    flex: 1;
+    flex: 2;
     justify-content: flex-end;
     align-content: center;
 }
 
 nav .item {
-    font-weight: lighter;
+    font-weight: 100;
     padding: 16px 20px;
-    color: #6f6f6f;
+    color: rgb(153, 145, 145);
 }
 
 nav .item>a {
@@ -35,15 +38,17 @@ nav .item>a {
 
 nav .item:hover {
     color: black;
+    background-color: #95b6d7;
 }
 
 nav .item.current {
     color: gray;
-    background-color: rgb(105, 204, 138);
+    background-color: #9ab9d8;
 }
 
 nav .dropdown {
     position: relative;
+    margin-right: 1px;
 }
 
 nav .dropdown-content {
@@ -54,15 +59,17 @@ nav .dropdown:hover>.dropdown-content,
 nav .dropdown-content:hover {
     display: block;
     position: absolute;
+    z-index: 1;
     top: 100%;
-    width: max-content;
-    right: 0;
+    width: 100%;
+    right: -1px;
     border: 1px solid #6f6f6f;
-    border-radius: 3px;
+    border-radius: 2px;
+    background-color: #9ab9d8;
 }
 
 nav .dropdown-content>.item {
-    margin: 0 5px;
+    margin: 0 2px;
     padding: 10px;
     border-bottom: 1px solid gray;
 }
